--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -13,6 +13,6 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:text="입력한 사용자 이름"
-        android:textSize="25sp"
+        android:textSize="25sp"/>
 
 </LinearLayout>
