요구사항 변경  - 이름 + 생년을 입력받아서 => 이름(?세)로 출력

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,13 @@
             android:singleLine="true"
             android:hint="이름을 입력하세요."/>
 
+        <EditText
+            android:id="@+id/birthYearEdt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:hint="생년을 입력하세요. (Ex. 1995)"/>
+
         <Button
             android:id="@+id/okBtn"
             android:layout_width="match_parent"
